--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Creami.ly</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet"
           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
@@ -74,8 +74,12 @@
       .video, .thermometer, .order, .social, .statistics {
         text-align: center;
       }
-      .statistics h3, .statistics p {
+      .statistics h3 {
         color: white;
+        background-color: #aaaaaa;
+      }
+      .statistics p {
+        color: #aaaaaa;
       }
 
       /* Marketing Copy and Footer */
@@ -110,7 +114,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Creami.ly</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -126,36 +130,37 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Creami.ly</h1>
         </div>
       </div>
 
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Sure it's exciting when the ice cream truck comes... but what if it came on demand?</p>
         </div>
       </div>
 
       <div class="row-fluid pitch">
-        <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+        <div class="span5 offset1 asset">
+          <!-- to do: local images -->
+          <img class="img" src="http://rvtravel.com/blog/chuck/uploaded_images/ice_cream-795292.jpg">
         </div>
         <div class="span5 actions">
           <div class="span8 offset2">
             <div class="statistics">
               <div class="span4">
                 <div class="linediv-l">
-                  <h3>1000</h3> <p>backers</p>
+                  <h3>22</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$880</h3> <p>of $6,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                  <h3>10</h3> <p>days left</p>
+                  <h3>18</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -163,8 +168,8 @@
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%"></div>
-              <div class="bar bar-warning" style="width: 40%"></div>
+              <div class="bar bar-success" style="width: 15%"></div>
+              <div class="bar bar-warning" style="width: 85%"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
@@ -181,23 +186,13 @@
 
       <!-- Marketing copy -->
       <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
-        </div>
-        <div class="span5 copy">
-          <p>
-            Messenger bag aesthetic sriracha, actually yr meggings wayfarers pug banjo. Keffiyeh letterpress brunch single-origin coffee, fanny pack sriracha ennui Bushwick raw denim american apparel roof party. Keytar ugh narwhal brunch tumblr pitchfork chillwave. Actually trust fund Marfa wolf pitchfork. Lo-fi tumblr Neutra post-ironic keffiyeh. Ennui mixtape shabby chic viral, Schlitz jean shorts before they sold out Austin. You probably haven't heard of them stumptown kitsch YOLO, hoodie cardigan blog Austin.
-          </p>
-        </div>
-      </div>
-      <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Messenger bag aesthetic sriracha, actually yr meggings wayfarers pug banjo. Keffiyeh letterpress brunch single-origin coffee, fanny pack sriracha ennui Bushwick raw denim american apparel roof party. Keytar ugh narwhal brunch tumblr pitchfork chillwave. Actually trust fund Marfa wolf pitchfork. Lo-fi tumblr Neutra post-ironic keffiyeh. Ennui mixtape shabby chic viral, Schlitz jean shorts before they sold out Austin. You probably haven't heard of them stumptown kitsch YOLO, hoodie cardigan blog Austin.
+            Kids driving you crazy? Trying to play with the sprinkler, but the water's freezing before it even hits them? Nothing says summer like the ice cream man. But who knows when his route will come their way again? Never fear. Pull out Creami.ly on any browser (or our iOS and Android apps) and let the ice cream man know it's time to head back toward your neighborhood. Alaska only for now, but once this takes off, we'll be global soon.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F3314493"></iframe>
         </div>
       </div>
 
@@ -209,13 +204,13 @@
             <div class="accordion-group">
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
-                    data-parent-"#accordion2" href="#collapseOne">
-                  What does FAQ stand for?
+                    data-parent="#accordion2" href="#collapseOne">
+                  Ice cream on demand? Sign me up!
                 </a>
               </div>
               <div id="collapseOne" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Frequently Asked Questions
+                  Sure... if you live in Alaska. This is exclusive to Alaska for now.
                 </div>
               </div>
             </div>
@@ -223,12 +218,25 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                     data-parent="#accordion2" href="#collapseTwo">
-                  What's a Frequently Asked Question?
+                  Ice cream... in Alaska?
                 </a>
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  A question which is commonly asked by users.
+                  Everybody likes ice cream!
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse"
+                    data-parent="#accordion2" href="#collapseThree">
+                  Are you serious?
+                </a>
+              </div>
+              <div id="collapseThree" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  No not even remotely.
                 </div>
               </div>
             </div>
