--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       }
 
       /* All form factors */
+      .navbar {
+        opacity: 0.95;
+      }
 
       /* Main body and headings */
       body {
@@ -105,7 +108,7 @@
   </head>
   <body>
     <!-- Mobile friendly navbar adapted from example. -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <button type="button" class="btn btn-navbar"
