--- a/index.html
+++ b/index.html
@@ -144,48 +144,56 @@
       </div>
 
       <div class="row-fluid pitch">
-        <div class="span5 offset1 asset">
+        <div class="span5 offset1 video">
           <!-- to do: local images -->
-          <img class="img" src="http://rvtravel.com/blog/chuck/uploaded_images/ice_cream-795292.jpg">
+          <img class="img" alt="Placeholder" src="http://placehold.it/480x300">
         </div>
         <div class="span5 actions">
-          <div class="span8 offset2">
-            <div class="statistics">
-              <div class="span4">
-                <div class="linediv-l">
-                  <h3>22</h3> <p>backers</p>
+          <div class="row-fluid">
+            <div class="span8 offset2">
+              <div class="row-fluid statistics">
+                <div class="span4">
+                  <div class="linediv-l">
+                    <h3>22</h3> <p>backers</p>
+                  </div>
+                </div>
+                <div class="span4">
+                  <div class="linediv-c">
+                    <h3>$880</h3> <p>of $6,000</p>
+                  </div>
+                </div>
+                <div class="span4">
+                  <div class="linediv-r">
+                    <h3>18</h3> <p>days left</p>
+                  </div>
                 </div>
               </div>
-              <div class="span4">
-                <div class="linediv-c">
-                  <h3>$880</h3> <p>of $6,000</p>
+            </div> <!-- /stats row -->
+            <div class="row-fluid">
+              <div class="span10 offset1">
+                <!-- Bootstrap progress bar -->
+                <div class="thermometer progress active">
+                  <div class="bar bar-success" style="width: 15%"></div>
+                  <div class="bar bar-warning" style="width: 85%"></div>
                 </div>
               </div>
-              <div class="span4">
-                <div class="linediv-r">
-                  <h3>18</h3> <p>days left</p>
-                </div>
+            </div> <!-- /progress row -->
+            <div class="row-fluid">
+              <div class="span6 offset3 order">
+                <button class="btn btn-success btn-large">Preorder</button>
               </div>
-            </div>
-          </div>
-          <div class="span10 offset1">
-            <!-- Bootstrap progress bar -->
-            <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 15%"></div>
-              <div class="bar bar-warning" style="width: 85%"></div>
-            </div>
-          </div>
-          <div class="span6 offset3 order">
-            <button class="btn btn-success btn-large">Preorder</button>
-          </div>
-          <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter </button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook </button>
-          </div>
-        </div>
-      </div>
+            </div> <!-- /order row -->
+            <div class="row-fluid">
+              <div class="span8 offset2 social">
+                <!-- Social buttons are not included in default Bootstrap. -->
+                <!-- See http://noizwaves.github.io/bootstrap-social-buttons -->
+                <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter </button>
+                <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook </button>
+              </div>
+            </div> <!-- /social row -->
+          </div> 
+        </div> 
+      </div> <!-- /pitch -->
 
       <!-- Marketing copy -->
       <div class="row-fluid section1">
@@ -195,7 +203,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F3314493"></iframe>
+          <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
         </div>
       </div>
 
