--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
   <head>
     <meta charset="utf-8">
-    <title>Creami.ly</title>
+    <title>Stickr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet"
           href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
@@ -132,7 +132,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Creami.ly</a>
+          <a class="brand" href="#">Stickr</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -148,20 +148,20 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Creami.ly</h1>
+          <h1>Stickr</h1>
         </div>
       </div>
 
       <div class="row-fluid subheading">
         <div class="span12">
-          <p class="lead">Sure it's exciting when the ice cream truck comes... but what if it came on demand?</p>
+          <p class="lead">Dude, where's my car? ...and when is street cleaning again?</p>
         </div>
       </div>
 
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <!-- to do: local images -->
-          <img class="img" alt="Placeholder" src="http://placehold.it/480x300">
+          <!-- to do: video -->
+          <img class="img-polaroid" alt="Video Placeholder" src="http://placehold.it/480x300">
         </div>
         <div class="span5 actions">
           <div class="row-fluid">
@@ -220,11 +220,11 @@
       <div class="row-fluid section1">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Kids driving you crazy? Trying to play with the sprinkler, but the water's freezing before it even hits them? Nothing says summer like the ice cream man. But who knows when his route will come their way again? Never fear. Pull out Creami.ly on any browser (or our iOS and Android apps) and let the ice cream man know it's time to head back toward your neighborhood. Alaska only for now, but once this takes off, we'll be global soon.
+            Let your iPhone keep track of where your car is parked and any timing restrictions on the spot you chose. Guess you'll have to find something else to worry about... and your neighborhood meter maid will have to find something else to do.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
+          <img class="img-polaroid" alt="Screenshot" src="resources/img/marina.png">
         </div>
       </div>
 
@@ -237,12 +237,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                     data-parent="#accordion2" href="#collapseOne">
-                  Ice cream on demand? Sign me up!
+                  What devices are supported?
                 </a>
               </div>
               <div id="collapseOne" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Sure... if you live in Alaska. This is exclusive to Alaska for now.
+                  For now, Stickr is iPhone only and supports iOS 7+
                 </div>
               </div>
             </div>
@@ -250,12 +250,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                     data-parent="#accordion2" href="#collapseTwo">
-                  Ice cream... in Alaska?
+                  Does it do anything else?
                 </a>
               </div>
               <div id="collapseTwo" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  Everybody likes ice cream!
+                  No, we kept it simple for a reason. Stickr keeps track of your parking spot and when that parking spot is no longer valid. That's it. Your phone is the Swiss Army Knife, we're just one of the tools you can use.
                 </div>
               </div>
             </div>
@@ -263,12 +263,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                     data-parent="#accordion2" href="#collapseThree">
-                  Are you serious?
+                  What about -insert esoteric parking restriction here-?
                 </a>
               </div>
               <div id="collapseThree" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  No not even remotely.
+                  We're constantly looking to improve Stickr's timing restriction functionality - there are a lot of rules out there! If you've encountered a use case we don't cover, drop us a line at <a href="mailto:stickr@unexplorednovelty.com">stickr@unexplorednovelty.com</a>
                 </div>
               </div>
             </div>
