Coinbase example - Bitcoin donations

--- a/index.html
+++ b/index.html
@@ -195,7 +195,9 @@
             </div> <!-- /progress row -->
             <div class="row-fluid">
               <div class="span6 offset3 order">
-                <button class="btn btn-success btn-large">Preorder</button>
+                <!-- coinbase bitcoin payment -->
+                <a class="coinbase-button" data-code="472aa2ab142a41c44690ce1499d799ce" data-button-style="custom_large" href="https://coinbase.com/checkouts/472aa2ab142a41c44690ce1499d799ce">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+                <!-- /coinbase -->
               </div>
             </div> <!-- /order row -->
             <div class="row-fluid">
